--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,6 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  display: grid;
+  grid-template-rows: 10vh 83vh 87vh 80vh 70vh 15vh;
 }
 
 @keyframes App-logo-spin {
