--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,24 +1,77 @@
 .footer {
-  background-color: white;
+  /* background-color: white; */
   display: grid;
   grid-template-columns: repeat(5, 20fr);
-  grid-template-rows: 1fr;
   max-height: 15vh;
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%2367001a' fill-opacity='0.15' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
-.contactlist {
-  display: inline-block;
-  list-style-type: none;
-  grid-row: 1 / 2;
+.contact {
+  display: grid;
+  grid-template-columns: 20fr 10fr 40fr 30fr;
+  grid-template-rows: 20fr 14fr 14fr 14fr 14fr 20fr;
 }
 
 #verticalContact {
-  transform: rotate(-90deg);
-  /* height: 15vh; */
-  max-width: 15vw;
-  /* grid-column: 1 / 2;
-  grid-row: 1 / 2; */
-  /* transform-origin: left bottom 0; */
-  /* display: inline-block;
-  align-self: flex-end; */
+  grid-row: 2 / span 4;
+  grid-column: 2 / 3;
+  transform: rotate(180deg);
+  writing-mode: vertical-rl;
+  align-self: center;
+  font-size: 0.6em;
+  font-family: "Libre Baskerville", serif;
+  font-weight: Bold;
+  color: rgba(103, 0, 26, 1);
+}
+
+.otherContacts {
+  /* grid-row: 2 / span 5; */
+  grid-column: 3 / 4;
+  font-size: 0.8em;
+  font-family: "Libre Baskerville", serif;
+  font-weight: normal;
+  color: rgba(103, 0, 26, 1);
+}
+#otherContacts1 {
+  grid-column: 3 / 4;
+  font-size: 0.8em;
+  font-family: "Libre Baskerville", serif;
+  font-weight: normal;
+  color: rgba(103, 0, 26, 1);
+}
+
+#otherContacts2 {
+  grid-column: 3 / 4;
+  font-size: 0.8em;
+  font-family: "Libre Baskerville", serif;
+  font-weight: normal;
+  color: rgba(103, 0, 26, 1);
+}
+
+.centerLogo {
+  /* background-image: url("../images//logos/LOGO-01.png"); */
+  grid-column: 3 / 3;
+  display: grid;
+  max-height: 100%;
+  max-width: 100%;
+  justify-content: end;
+}
+
+.logoTag {
+  display: grid;
+  background-image: url("../images//logos/LOGO-01.png");
+  background-size: 100% 100%;
+  font-size: 0.6em;
+  font-family: "Libre Baskerville", serif;
+  font-weight: normal;
+  height: 100%;
+  width: 100%;
+  align-content: flex-end;
+  color: rgba(103, 0, 26, 1);
+}
+
+.copyright {
+  vertical-align: bottom;
+  color: rgba(103, 0, 26, 1);
 }
