--- a/src/styles/practiceareas.css
+++ b/src/styles/practiceareas.css
@@ -32,9 +32,11 @@
   grid-row: 2 / 3;
   font-family: "Roboto", sans-serif;
   font-weight: 700;
-  font-size: 2.8em;
+  font-size: 2.4em;
   color: rgba(103, 0, 26, 1);
   align-items: center;
+  font-family: "Libre Baskerville", serif;
+  font-weight: Bold;
 }
 
 .gavel {
@@ -49,7 +51,8 @@
   margin: 0px 10px 0px 0px;
   font-size: 3.2em;
   color: rgba(103, 0, 26, 1);
-  font-family: "Roboto", sans-serif;
+  font-family: "Libre Baskerville", serif;
+  font-weight: Bold;
   text-shadow: 0px 2px 2px rgba(150, 150, 150, 1);
 }
 
@@ -61,5 +64,6 @@
   margin: 0;
   font-size: 2em;
   color: rgba(103, 0, 26, 1);
-  font-family: "Open Sans", sans-serif;
+  font-family: "Libre Baskerville", serif;
+  font-weight: normal;
 }
