--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,7 +1,94 @@
+@media screen and (max-width: 610px) {
+  .footer .centerLogo {
+    grid-column: 2 / span 3 !important;
+    justify-content: center;
+  }
+
+  #copyright {
+    font-size: 0.8em;
+  }
+  .contact #verticalContact {
+    font-size: 0.5em;
+    padding-left: 3px;
+  }
+
+  .contact #otherContacts1 {
+    font-size: 0.7em;
+  }
+  .contact .otherContacts {
+    font-size: 0.7em;
+  }
+  .contact #otherContacts2 {
+    font-size: 0.7em;
+  }
+}
+
+@media screen and (max-width: 524px) {
+  #copyright {
+    font-size: 0.7em;
+  }
+}
+
+@media screen and (max-width: 524px) {
+  #copyright {
+    font-size: 0.7em;
+  }
+  .contact #verticalContact {
+    font-size: 0.5em;
+  }
+
+  .contact #otherContacts1 {
+    font-size: 0.6em;
+  }
+  .contact .otherContacts {
+    font-size: 0.6em;
+  }
+  .contact #otherContacts2 {
+    font-size: 0.6em;
+  }
+}
+@media screen and (max-width: 524px) {
+  #copyright {
+    font-size: 0.6em;
+  }
+  .contact #verticalContact {
+    font-size: 0.5em;
+  }
+
+  .contact #otherContacts1 {
+    font-size: 0.6em;
+  }
+  .contact .otherContacts {
+    font-size: 0.6em;
+  }
+  .contact #otherContacts2 {
+    font-size: 0.6em;
+  }
+}
+
+@media screen and (max-width: 396px) {
+  #copyright {
+    font-size: 0.55em;
+  }
+  .contact #verticalContact {
+    font-size: 0.4em;
+  }
+
+  .contact #otherContacts1 {
+    font-size: 0.5em;
+  }
+  .contact .otherContacts {
+    font-size: 0.5em;
+  }
+  .contact #otherContacts2 {
+    font-size: 0.5em;
+  }
+}
+
 .footer {
   /* background-color: white; */
   display: grid;
-  grid-template-columns: repeat(5, 20fr);
+  grid-template-columns: 20fr 60fr 20fr;
   max-height: 15vh;
   background-color: #ffffff;
   background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%2367001a' fill-opacity='0.15' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
@@ -11,6 +98,7 @@
   display: grid;
   grid-template-columns: 20fr 10fr 40fr 30fr;
   grid-template-rows: 20fr 14fr 14fr 14fr 14fr 20fr;
+  padding-left: 2%;
 }
 
 #verticalContact {
@@ -51,11 +139,11 @@
 
 .centerLogo {
   /* background-image: url("../images//logos/LOGO-01.png"); */
-  grid-column: 3 / 3;
+  grid-column: 2 / 2;
   display: grid;
   max-height: 100%;
   max-width: 100%;
-  justify-content: end;
+  justify-content: center;
 }
 
 .logoTag {
@@ -71,7 +159,7 @@
   color: rgba(103, 0, 26, 1);
 }
 
-.copyright {
+#copyright {
   vertical-align: bottom;
   color: rgba(103, 0, 26, 1);
 }
